--- a/anki_card_tooling/pyproject.toml
+++ b/anki_card_tooling/pyproject.toml
@@ -1,10 +1,17 @@
-[project]
-name = "anki_card_tooling"
-version = "0.1.0"
+[build-system]
+requires = ["setuptools>=61"]
+build-backend = "setuptools.build_meta"
 
+[project]
 requires-python = ">=3.14"
+name = "anki-card-tooling"
+dynamic = ["version"]
 dependencies = [
     "ruff==0.14.10",
     "pydantic==2.12.5",
 ]
 
+
+[tool.setuptools]
+packages = []
+py-modules = []
